meta-arguments/depends_on/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc_demo.id

  tags = {
    Name = "Terraform-IGW"
  }
}
